# CENG477HW2

./: .clang-format  .clang-tidy  .clangd  .gitignore  Base.cpp  Base.hpp  CENG477.cpp  CENG477.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  DESIGN.md  Helpers.h  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  README.md  Rasterizer.cpp  Rasterizer.hpp  Renderer.cpp  Renderer.hpp  Rotation.cpp  Rotation.h  Scaling.cpp  Scaling.h  Scene.cpp  Scene.h  Translation.cpp  Translation.h  Triangle.cpp  Triangle.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  World.cpp  World.hpp  (+6 more)
resource/culling_disabled_inputs/: triangle.xml
resource/culling_enabled_inputs/: triangle.xml
submission/: CENG477.cpp  Makefile  Renderer.cpp  Renderer.hpp
